--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,21 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
-            android:name="com.example.Projet4A.App"
+            android:name="com.example.Projet4A.injection.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.example.Projet4A.ui.list.ListActivity">
+        <activity android:name="com.example.Projet4A.presentation.list.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.example.Projet4A.ui.details.MovieDetailActivity">
+        <activity android:name="com.example.Projet4A.presentation.details.MovieDetailActivity">
         </activity>
     </application>
 
