--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
+android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
 Movie_API_KEY="852eb333fbdf1f20f7da454df993da34"
